--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   class="bg-zinc-100 dark:bg-zinc-900 dark:text-white h-screen flex flex-col justify-center max-w-7xl mx-auto relative">
   <h1 class="text-4xl font-medium text-center my-10 mb-20">Título do app</h1>
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
-    <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center">
+    <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center" id="login-form">
       <div class="flex flex-col gap-3 mb-3">
         <label for="email">Email</label>
-        <input type="email" name="email" placeholder="Digite seu email"
+        <input type="email" name="email" id="email" placeholder="Digite seu email"
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
       <div class="flex flex-col gap-3 mb-5">
         <label for="password">Senha</label>
-        <input type="password" name="password" placeholder="Digite sua senha"
+        <input type="password" name="password" id="password" placeholder="Digite sua senha"
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
       <button class="rounded px-4 bg-sky-600 hover:bg-sky-700 duration-300 h-10 text-white mb-5" type="submit"
