--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
   <!-- Libs -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -19,12 +20,12 @@
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
     <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center" id="login-form">
       <div class="flex flex-col gap-3 mb-3">
-        <label for="email">Email</label>
+        <label for="email"><i class="bi bi-envelope-fill"></i> Email</label>
         <input type="email" name="email" id="email" placeholder="Digite seu email"
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
       <div class="flex flex-col gap-3 mb-5">
-        <label for="password">Senha</label>
+        <label for="password"><i class="bi bi-lock-fill"></i> Senha</label>
         <input type="password" name="password" id="password" placeholder="Digite sua senha"
           class="rounded-sm dark:text-black px-3 h-10 hover:bg-zinc-200" />
       </div>
