--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body
   class="bg-zinc-100 dark:bg-zinc-900 dark:text-white h-screen flex flex-col justify-center max-w-7xl mx-auto relative">
-  <h1 class="text-4xl font-medium text-center my-10 mb-20">Título do app</h1>
+  <h1 class="text-4xl font-medium text-center my-10 mb-20">S-Mobills</h1>
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
     <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center" id="login-form">
       <div class="flex flex-col gap-3 mb-3">
