--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   class="bg-zinc-100 dark:bg-zinc-900 dark:text-white h-screen flex flex-col justify-center max-w-7xl mx-auto relative">
   <h1 class="text-4xl font-medium text-center my-10 mb-20">S-Mobills</h1>
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
-    <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center" id="login-form">
+    <form class="relative w-10/12 md:w-6/12 lg:w-3/12 flex flex-col justify-center" id="login-form">
       <div class="flex flex-col gap-3 mb-3">
         <label for="email"><i class="bi bi-envelope-fill"></i> Email</label>
         <input type="email" name="email" id="email" placeholder="Digite seu email"
@@ -38,7 +38,7 @@
         </a>
       </p>
     </form>
-    <img class="w-6/12 lg:w-4/12 h-64 lg:h-80" src="./assets/img/login_img.svg" alt="" />
+    <img class="w-10/12 md:w-6/12 lg:w-4/12 h-64 lg:h-80" src="./assets/img/login_img.svg" alt="" />
   </div>
 </body>
 
